; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_x86_cs.c_reg32_to_name.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_x86_cs.c_reg32_to_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"eax\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"ecx\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"edx\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"ebx\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"esp\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"ebp\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"esi\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"edi\00", align 1
@__const.reg32_to_name.names = private unnamed_addr constant [8 x i8*] [i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i32 0, i32 0)], align 16
@.str.8 = private unnamed_addr constant [4 x i8] c"unk\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @reg32_to_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @reg32_to_name(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca [8 x i8*], align 16
  store i64 %0, i64* %2, align 8
  %4 = bitcast [8 x i8*]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 bitcast ([8 x i8*]* @__const.reg32_to_name.names to i8*), i64 64, i1 false)
  %5 = load i64, i64* %2, align 8
  %6 = getelementptr inbounds [8 x i8*], [8 x i8*]* %3, i64 0, i64 0
  %7 = call i64 @R_ARRAY_SIZE(i8** %6)
  %8 = icmp ult i64 %5, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i64, i64* %2, align 8
  %11 = getelementptr inbounds [8 x i8*], [8 x i8*]* %3, i64 0, i64 %10
  %12 = load i8*, i8** %11, align 8
  br label %14

13:                                               ; preds = %1
  br label %14

14:                                               ; preds = %13, %9
  %15 = phi i8* [ %12, %9 ], [ getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i64 0, i64 0), %13 ]
  ret i8* %15
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @R_ARRAY_SIZE(i8**) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
